Version 0.8.2 r195
released 7/16/2011
---

 * Use LDADD instead of LDFLAGS (fixes Debian bug #631674)
 * Make the "idle" test optional as it does not work on 32-bit Linux
 * Use time_t for PWQ_SPIN_USEC to fix a build problem on 32-bit Linux

Version 0.8.1 r?
released 7/16/2011
---

 * Uploaded to Debian, but not generally released.

Version 0.8 r190
released 7/08/2011
---

 * Remove the 'struct worker' datatype and related housekeeping chores.

 * Fix incorrect usage of pthread_cond_timedwait() for overcommit threads. 

 * Various improvements and bug fixes for the Windows port.

 * Prevent a race condition that could cause a use-after-free if a witem
   were freed before manager_workqueue_additem() returned.

 * Prevent races involving the scoreboard variables.

 * Fix a lost wakeup bug when calling worker_stop().

 * Finally fixed the long standing TODO and removed the global lock for pwq enqueue/dequeue.

 * Only signal wakeups for the pool if there are idle threads available to process data. 

 * Use atomics for updating the mask with pending workqueues as the global lock was removed.

 * Added optional idle thread spinning by using the PWQ_SPIN_USEC and PWQ_SPIN_THREADS environment variables. The accrued changes decrease latency from 7-8 microseconds to ~1 +- 0.5 microsecond depending on spin configuration. By default, no spinning will be done.

 * Renamed USE_RT_THREADS to PWQ_RT_THREADS for consistency. 

 * Allow specification of number of CPU:s by using the environment variable PWQ_ACTIVE_CPU - this is useful when using e.g. processor sets (fewer CPU:s are truly available to the process than is physically available in the machine). Proper auto-detection of this would be even nicer in the future, but investigation for the various platforms is required - this environment variable allows for a simple workaround in the meantime.

Version 0.7.1 r157
released 7/02/2011
---

 * Fix a memory leak in worker_overcommit_main() when reaping idle threads.
